Details
-
Bug
-
Resolution: Fixed
-
Critical
-
Lustre 2.16.0, Lustre 2.17.0
-
None
-
3
-
9223372036854775807
Description
Certain nid character arrays in the liblustreapi do not accommodate for nidlists larger than >256 characters due to using MAX_LINE_LEN for its size. This causes further issues in get_root_path() that can result in a buffer overflow during a string copy.
"Marc Vef <mvef@whamcloud.com>" uploaded a new patch: https://review.whamcloud.com/c/fs/lustre-release/+/59779
Subject:
LU-19050utils: fix get_root_path WANT conditionProject: fs/lustre-release
Branch: master
Current Patch Set: 1
Commit: b9ed5d2924b79f02ffda3d054b065cc78a62978e